--- a/webgl.html
+++ b/webgl.html
@@ -1,27 +1,28 @@
 <html>
 
 <head>
-<title>Hello CG</title>
-<style>
-    html, body {
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        width: 90%;
-        height: 90%;
+    <title>Trabalho CG</title>
+    <style>
+        html,
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            width: 100%;
+            height: 100%;
 
-        /* Center the canvas */
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+            /* Center the canvas */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-    #glcanvas1 {
-        display: block;
-        width: 100%;
-        height: 100%;
-    }
-</style>
+        #glcanvas1 {
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 
 <script src="math.js"></script>
@@ -97,12 +98,13 @@ void main()
     gl_FragColor.rgb += lightColor*pow(lighte, 100.0)*texColor;    
     
     gl_FragColor.a = texture2D(tex, v_texCoord).a;
+    gl_FragColor = texture2D(tex, v_texCoord);
 }
 </script>
 
 <body onload="init()">
 
-<canvas id="glcanvas1" width="1080" height="720"></canvas>
+    <canvas id="glcanvas1" width="1080" height="720"></canvas>
 
 </body>
 
