Making readme and changing title name

--- a/congrats.html
+++ b/congrats.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>Web GL</title>
+        <title>Porta dos CGsperados</title>
     </head>
 
     <script src="math.js"></script>
