--- a/loss.html
+++ b/loss.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>Web GL</title>
+        <title>Porta dos CGsperados</title>
     </head>
 
     <script src="math.js"></script>
